--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         let res = a / b;
         // document.write(res,"<br>")
         
-        document.write(res.toPrecision(2))
+        document.write(res.toFixed(2))
     </script>
 </body>
 </html>
